[workspace]

members = [
    "hotpatch",
    "hotpatch_macros",
    "examples/hello_world/hw_bin",
    "examples/hello_world/hw_obj",
    "examples/threads/threads_bin",
    "examples/threads/threads_obj",
    "examples/multiple/multiple_bin",
    "examples/multiple/multiple_obj1",
    "examples/multiple/multiple_obj2",
    "examples/local",
    "examples/methods",
    "examples/methods_extra_obj",
    "examples/unsafe/unsafe_bin",
    "examples/unsafe/unsafe_obj",
]