[package]
name = "hotpatch"
version = "0.1.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"

[features]
default = []
allow-main = ["hotpatch_macros/allow-main"]
redirect-main = ["hotpatch_macros/redirect-main"]
large-signatures = []

[dependencies]
once_cell= "1.5.2"
libloading = "0.6"
simple-error = "0.2.2"
hotpatch_macros = {path = "../hotpatch_macros", version = "0.1.0"}
variadic_generics = "0.1.1"