[package]
name = "hotpatch"
version = "0.3.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
description = "Changing function definitions at runtime"
license = "GPL-3.0"
readme = "../README.md"
repository = "https://github.com/Shizcow/hotpatch"
keywords = ["hotpatch", "patch", "dynamic", "hotload"]
categories = ["development-tools"]

[features]
default = []
allow-main = ["hotpatch_macros/allow-main"]
redirect-main = ["hotpatch_macros/redirect-main"]
large-signatures = []

[dependencies]
once_cell= "^1.5.0"
libloading = "^0.6"
simple-error = "^0.2.0"
hotpatch_macros = {path = "../hotpatch_macros", version = "0.3.0"}
variadic_generics = "^0.1.0"