[package]
name = "hotpatch_macros"
version = "0.3.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
description = "Macros for hotpatch"
license = "GPL-3.0"
readme = "../README.md"
repository = "https://github.com/Shizcow/hotpatch"
keywords = ["hotpatch", "patch", "dynamic", "hotload"]
categories = ["development-tools"]

[lib]
proc-macro = true

[features]
default = []
allow-main = []
redirect-main = []

[dependencies]
proc-macro2 = "^1.0.0"
syn = {version = "^1.0.0", features = ["full", "extra-traits"]}
lazy_static = "^1.4.0"
quote = "^1.0.0"